tests/compile-fail/alloc/reallocate-change-alloc.stderr
error: Undefined Behavior: pointer to alloc962 was dereferenced after this allocation got freed
  --> $DIR/reallocate-change-alloc.rs:7:18
   |
LL |         let _z = *x; //~ ERROR dereferenced after this allocation got freed
   |                  ^^ pointer to alloc962 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/reallocate-change-alloc.rs:7:18

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

